components/rhacs-operator/rhacs-operator-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "Red Hat Advanced Cluster Security Operator"
  labels:
    openshift.io/cluster-monitoring: 'true'
  name: rhacs-operator
